--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+/*
+    Created by Kenny Nguyen, Keon Hee Park, and Mona Shittul
+    Project 2: Game of Fifteen
+    style.css
+	Course: CSC 4370 - Web Programming
+	Instructor: Louis Henry
+	Date: November 7, 2016
+*/
+
 div#memory_board {
     background: #CCC;
     border: #999 1px solid;
