--- a/css/style.css
+++ b/css/style.css
@@ -12,44 +12,38 @@ html,body, #body_container{
 }
 
 div#memory_board {
-    background: #CCC;
-    border: #999 1px solid;
     width: 400px;
     height: 400px;
     padding: 0px;
     margin: 0px auto;
 }
 
-div#memory_board>div {
-    background: url(tile_bg.jpg) no-repeat;
-    border: #000 2px solid;
+.tile {
+    border: black 2px solid;
     width: 96px;
     height: 96px;
     float: left;
     margin: 0px;
-    padding: 0px;
+	padding:0px;
+    padding-top: 0px;
     font-size: 64px;
     cursor: pointer;
     text-align: center;
+	vertical-align: middle;
+	line-height: 96px;
 }
 
-#later {
-    display: none;
+.hide{
+	display: none;
 }
-
-#win {
-    display: none;
-}
-
-#lb {
-    display: none;
-}
-
 #cs_logo{
     width: 99%;
     height: 15%;
 }
-
+.movablepiece:hover{
+    border: red 2px solid;
+	color:#006600;
+}
 #objective{
     font-weight: normal;
 }
