--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,10 @@
 	Instructor: Louis Henry
 	Date: November 7, 2016
 */
-html,body, #body_container{
+
+html,
+body,
+#body_container {
     width: 100%;
     height: 100%;
 }
@@ -24,27 +27,30 @@ div#memory_board {
     height: 96px;
     float: left;
     margin: 0px;
-	padding:0px;
+    padding: 0px;
     padding-top: 0px;
     font-size: 64px;
     cursor: pointer;
     text-align: center;
-	vertical-align: middle;
-	line-height: 96px;
+    vertical-align: middle;
+    line-height: 96px;
 }
 
-.hide{
-	display: none;
+.hide {
+    display: none;
 }
-#cs_logo{
+
+#cs_logo {
     width: 99%;
     height: 15%;
 }
-.movablepiece:hover{
+
+.movablepiece:hover {
     border: red 2px solid;
-	color:#006600;
+    color: #006600;
 }
-#objective{
+
+#objective {
     font-weight: normal;
 }
 
