--- a/css/style.css
+++ b/css/style.css
@@ -36,6 +36,16 @@ div#memory_board {
     line-height: 96px;
 }
 
+#picOptions{
+	width: 200px;
+    height: 20px;
+	margin: 0 auto;
+}
+
+.floatL{
+	float:left;
+}
+
 .hide {
     display: none;
 }
@@ -58,6 +68,16 @@ h1,
 h2,
 .centering {
     text-align: center;
+}
+
+.moreButtons
+{
+	padding:0px;
+	width: 200px;
+    height: 20px;
+	margin-left:auto;
+	margin-right:auto;
+	text-align: center;
 }
 
 #bottom-right-div {
